fix the navbar & banner issue h-screen, decrease the gap little

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <body>
     <!-- section::header  -->
     <header
-      class="w-4/5 mx-auto mt-[2rem] lg:min-h-[calc(100vh_-_2rem)] flex flex-col gap-[2rem] justify-center items-center"
+      class="w-4/5 mx-auto mt-[1rem] lg:min-h-[calc(100vh_-_1rem)] flex flex-col gap-[1.125rem] lg:gap-[2rem] justify-center items-center"
     >
       <!-- sub-section:: navbar -->
       <nav class="navbar">
@@ -119,7 +119,7 @@
       <!-- sub-section:: banner  -->
       <section
         id="banner"
-        class="flex flex-col gap-[2.5rem] justify-center items-center"
+        class="flex flex-col gap-[1.5rem] lg:gap-[2rem] justify-center items-center"
       >
         <div
           class="banner-description text-center flex flex-col justify-center items-center"
