adding hover effect on cards action buttons

--- a/index.html
+++ b/index.html
@@ -287,19 +287,19 @@
                 class="flex gap-[0.825rem] justify-evenly items-center md:flex-wrap lg:flex-nowrap"
               >
                 <button
-                  class="btn border border-[#0E7A8126] bg-white rounded text-[#13131399]"
+                  class="btn border border-[#0E7A8126] bg-white rounded text-[#13131399] hover:bg-[#0E7A81B3] hover:border-[#0E7A81] hover:text-white hover:rounded-lg transition-all duration-[2000ms]"
                   type="button"
                 >
                   <i class="fa-solid fa-thumbs-up"></i>
                 </button>
                 <button
-                  class="btn border border-[#0E7A8126] bg-white rounded text-[#0E7A81]"
+                  class="btn border border-[#0E7A8126] bg-white rounded text-[#0E7A81] hover:bg-[#0E7A81B3] hover:border-[#0E7A81] hover:text-white hover:rounded-xl transition-all duration-[2000ms]"
                   type="button"
                 >
                   Adopt
                 </button>
                 <button
-                  class="btn border border-[#0E7A8126] bg-white rounded text-[#0E7A81]"
+                  class="btn border border-[#0E7A8126] bg-white rounded text-[#0E7A81] hover:bg-[#0E7A81B3] hover:border-[#0E7A81] hover:text-white hover:rounded-2xl transition-all duration-[2000ms]"
                   type="button"
                 >
                   Details
@@ -343,19 +343,19 @@
                 class="flex gap-[0.825rem] justify-evenly items-center md:flex-wrap lg:flex-nowrap"
               >
                 <button
-                  class="btn border border-[#0E7A8126] bg-white rounded text-[#13131399]"
+                  class="btn border border-[#0E7A8126] bg-white rounded text-[#13131399] hover:bg-[#0E7A81B3] hover:border-[#0E7A81] hover:text-white hover:rounded-lg transition-all duration-[2000ms]"
                   type="button"
                 >
                   <i class="fa-solid fa-thumbs-up"></i>
                 </button>
                 <button
-                  class="btn border border-[#0E7A8126] bg-white rounded text-[#0E7A81]"
+                  class="btn border border-[#0E7A8126] bg-white rounded text-[#0E7A81] hover:bg-[#0E7A81B3] hover:border-[#0E7A81] hover:text-white hover:rounded-xl transition-all duration-[2000ms]"
                   type="button"
                 >
                   Adopt
                 </button>
                 <button
-                  class="btn border border-[#0E7A8126] bg-white rounded text-[#0E7A81]"
+                  class="btn border border-[#0E7A8126] bg-white rounded text-[#0E7A81] hover:bg-[#0E7A81B3] hover:border-[#0E7A81] hover:text-white hover:rounded-2xl transition-all duration-[2000ms]"
                   type="button"
                 >
                   Details
@@ -399,19 +399,19 @@
                 class="flex gap-[0.825rem] justify-evenly items-center md:flex-wrap lg:flex-nowrap"
               >
                 <button
-                  class="btn border border-[#0E7A8126] bg-white rounded text-[#13131399]"
+                  class="btn border border-[#0E7A8126] bg-white rounded text-[#13131399] hover:bg-[#0E7A81B3] hover:border-[#0E7A81] hover:text-white hover:rounded-lg transition-all duration-[2000ms]"
                   type="button"
                 >
                   <i class="fa-solid fa-thumbs-up"></i>
                 </button>
                 <button
-                  class="btn border border-[#0E7A8126] bg-white rounded text-[#0E7A81]"
+                  class="btn border border-[#0E7A8126] bg-white rounded text-[#0E7A81] hover:bg-[#0E7A81B3] hover:border-[#0E7A81] hover:text-white hover:rounded-xl transition-all duration-[2000ms]"
                   type="button"
                 >
                   Adopt
                 </button>
                 <button
-                  class="btn border border-[#0E7A8126] bg-white rounded text-[#0E7A81]"
+                  class="btn border border-[#0E7A8126] bg-white rounded text-[#0E7A81] hover:bg-[#0E7A81B3] hover:border-[#0E7A81] hover:text-white hover:rounded-2xl transition-all duration-[2000ms]"
                   type="button"
                 >
                   Details
@@ -455,19 +455,19 @@
                 class="flex gap-[0.825rem] justify-evenly items-center md:flex-wrap lg:flex-nowrap"
               >
                 <button
-                  class="btn border border-[#0E7A8126] bg-white rounded text-[#13131399]"
+                  class="btn border border-[#0E7A8126] bg-white rounded text-[#13131399] hover:bg-[#0E7A81B3] hover:border-[#0E7A81] hover:text-white hover:rounded-lg transition-all duration-[2000ms]"
                   type="button"
                 >
                   <i class="fa-solid fa-thumbs-up"></i>
                 </button>
                 <button
-                  class="btn border border-[#0E7A8126] bg-white rounded text-[#0E7A81]"
+                  class="btn border border-[#0E7A8126] bg-white rounded text-[#0E7A81] hover:bg-[#0E7A81B3] hover:border-[#0E7A81] hover:text-white hover:rounded-xl transition-all duration-[2000ms]"
                   type="button"
                 >
                   Adopt
                 </button>
                 <button
-                  class="btn border border-[#0E7A8126] bg-white rounded text-[#0E7A81]"
+                  class="btn border border-[#0E7A8126] bg-white rounded text-[#0E7A81] hover:bg-[#0E7A81B3] hover:border-[#0E7A81] hover:text-white hover:rounded-2xl transition-all duration-[2000ms]"
                   type="button"
                 >
                   Details
@@ -511,19 +511,19 @@
                 class="flex gap-[0.825rem] justify-evenly items-center md:flex-wrap lg:flex-nowrap"
               >
                 <button
-                  class="btn border border-[#0E7A8126] bg-white rounded text-[#13131399]"
+                  class="btn border border-[#0E7A8126] bg-white rounded text-[#13131399] hover:bg-[#0E7A81B3] hover:border-[#0E7A81] hover:text-white hover:rounded-lg transition-all duration-[2000ms]"
                   type="button"
                 >
                   <i class="fa-solid fa-thumbs-up"></i>
                 </button>
                 <button
-                  class="btn border border-[#0E7A8126] bg-white rounded text-[#0E7A81]"
+                  class="btn border border-[#0E7A8126] bg-white rounded text-[#0E7A81] hover:bg-[#0E7A81B3] hover:border-[#0E7A81] hover:text-white hover:rounded-xl transition-all duration-[2000ms]"
                   type="button"
                 >
                   Adopt
                 </button>
                 <button
-                  class="btn border border-[#0E7A8126] bg-white rounded text-[#0E7A81]"
+                  class="btn border border-[#0E7A8126] bg-white rounded text-[#0E7A81] hover:bg-[#0E7A81B3] hover:border-[#0E7A81] hover:text-white hover:rounded-2xl transition-all duration-[2000ms]"
                   type="button"
                 >
                   Details
@@ -567,19 +567,19 @@
                 class="flex gap-[0.825rem] justify-evenly items-center md:flex-wrap lg:flex-nowrap"
               >
                 <button
-                  class="btn border border-[#0E7A8126] bg-white rounded text-[#13131399]"
+                  class="btn border border-[#0E7A8126] bg-white rounded text-[#13131399] hover:bg-[#0E7A81B3] hover:border-[#0E7A81] hover:text-white hover:rounded-lg transition-all duration-[2000ms]"
                   type="button"
                 >
                   <i class="fa-solid fa-thumbs-up"></i>
                 </button>
                 <button
-                  class="btn border border-[#0E7A8126] bg-white rounded text-[#0E7A81]"
+                  class="btn border border-[#0E7A8126] bg-white rounded text-[#0E7A81] hover:bg-[#0E7A81B3] hover:border-[#0E7A81] hover:text-white hover:rounded-xl transition-all duration-[2000ms]"
                   type="button"
                 >
                   Adopt
                 </button>
                 <button
-                  class="btn border border-[#0E7A8126] bg-white rounded text-[#0E7A81]"
+                  class="btn border border-[#0E7A8126] bg-white rounded text-[#0E7A81] hover:bg-[#0E7A81B3] hover:border-[#0E7A81] hover:text-white hover:rounded-2xl transition-all duration-[2000ms]"
                   type="button"
                 >
                   Details
