write some line of code for dynamically show the category menu in the website

--- a/index.html
+++ b/index.html
@@ -192,38 +192,9 @@
 
       <!-- section::categories -->
       <section
-        id="categories"
+        id="categories-container"
         class="mt-[2.5rem] grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 justify-center items-center gap-[1.24rem]"
-      >
-        <button
-          class="font-inter font-bold text-[#131313] text-[1.24rem] bg-white border border-[#0E7A8126] capitalize py-[1.24rem] rounded-md flex justify-center items-center gap-[0.825rem] hover:bg-[#0E7A811A] hover:border-[#0E7A81] transition-all duration-[2000ms] ease-in-out hover:rounded-full"
-          type="button"
-        >
-          <img src="./asset/images/logo.webp" alt="" />
-          <span>dogs</span>
-        </button>
-        <button
-          class="font-inter font-bold text-[#131313] text-[1.24rem] bg-white border border-[#0E7A8126] capitalize py-[1.24rem] rounded-md flex justify-center items-center gap-[0.825rem] hover:bg-[#0E7A811A] hover:border-[#0E7A81] transition-all duration-[2000ms] ease-in-out hover:rounded-full"
-          type="button"
-        >
-          <img src="./asset/images/logo.webp" alt="" />
-          <span>dogs</span>
-        </button>
-        <button
-          class="font-inter font-bold text-[#131313] text-[1.24rem] bg-white border border-[#0E7A8126] capitalize py-[1.24rem] rounded-md flex justify-center items-center gap-[0.825rem] hover:bg-[#0E7A811A] hover:border-[#0E7A81] transition-all duration-[2000ms] ease-in-out hover:rounded-full"
-          type="button"
-        >
-          <img src="./asset/images/logo.webp" alt="" />
-          <span>dogs</span>
-        </button>
-        <button
-          class="font-inter font-bold text-[#131313] text-[1.24rem] bg-white border border-[#0E7A8126] capitalize py-[1.24rem] rounded-md flex justify-center items-center gap-[0.825rem] hover:bg-[#0E7A811A] hover:border-[#0E7A81] transition-all duration-[2000ms] ease-in-out hover:rounded-full"
-          type="button"
-        >
-          <img src="./asset/images/logo.webp" alt="" />
-          <span>dogs</span>
-        </button>
-      </section>
+      ></section>
 
       <!-- section::sort -->
       <section
