write some line of code for dynamically show spinner for 2s and after that show data

--- a/index.html
+++ b/index.html
@@ -212,6 +212,14 @@
         </button>
       </section>
 
+      <!-- section:: loader/spinner  -->
+      <section
+        id="spinner"
+        class="justify-center items-center my-[5rem] hidden"
+      >
+        <span class="loading loading-spinner loading-xl"></span>
+      </section>
+
       <!-- section::pet-container  -->
       <section
         id="pet-container"
