--- a/index.html
+++ b/index.html
@@ -205,6 +205,7 @@
           Best Deal For you
         </h4>
         <button
+          onclick="sortByPrice()"
           class="btn lg:btn-lg font-bold text-white text-[1rem] lg:text-[1.1rem] bg-[#0E7A81] border border-[#0E7A81] rounded-md"
           type="button"
         >
