write some line of code to fix the issue of liked-pet-container's image appearance alignment and extra height problem

--- a/index.html
+++ b/index.html
@@ -262,9 +262,14 @@
 
         <!-- subsection:: liked pet container  -->
         <div
-          id="liked-pet-container"
-          class="md:col-span-2 border border-[#1313131A] p-[1rem] rounded-md grid grid-cols-1 md:grid-cols-2 gap-[0.825rem] justify-center"
-        ></div>
+          id="liked-pets-display"
+          class="md:col-span-2 border border-[#1313131A] p-[1rem] rounded-md hidden md:block"
+        >
+          <div
+            id="liked-pet-container"
+            class="grid grid-cols-1 md:grid-cols-2 gap-[0.825rem] justify-center"
+          ></div>
+        </div>
       </section>
 
       <!-- section::modal-1 (for pet details) -->
