--- a/index.html
+++ b/index.html
@@ -295,10 +295,6 @@
       </dialog>
 
       <!-- section::modal-2 (for adopt button) -->
-      <!-- You can open the modal using ID.showModal() method -->
-      <!-- <button class="btn" onclick="adopt_button_modal.showModal()">
-        open modal
-      </button>
       <dialog id="adopt_button_modal" class="modal">
         <div class="modal-box">
           <form method="dialog">
@@ -308,10 +304,24 @@
               ✕
             </button>
           </form>
-          <h3 class="text-lg font-bold">Hello!</h3>
-          <p class="py-4">Press ESC key or click on ✕ button to close</p>
+          <!-- pet adaption success message  -->
+          <div class="flex flex-col gap-[0.5rem] justify-center items-center">
+            <figure class="flex justify-center items-center w-20 h-20">
+              <img
+                src="https://img.icons8.com/?size=96&id=108783&format=png"
+                alt="deal"
+                class="w-full h-full object-cover"
+              />
+            </figure>
+            <h5 class="font-inter font-bold text-[1.24rem] text-[#131313]">
+              Congrats
+            </h5>
+            <p class="font-inter font-light text-[1.125rem] text-[#131313B3]">
+              Adaption Process is Start For Your Pet
+            </p>
+          </div>
         </div>
-      </dialog> -->
+      </dialog>
     </main>
 
     <!-- section:: footer  -->
