write some line of code for creating the count down and implement it into adopt-button-modal box and it's can auto close the modal box after finishing count down

--- a/index.html
+++ b/index.html
@@ -299,6 +299,7 @@
         <div class="modal-box">
           <form method="dialog">
             <button
+              id="close-adopt-modal"
               class="btn btn-sm btn-circle btn-ghost absolute right-2 top-2"
             >
               ✕
@@ -319,6 +320,13 @@
             <p class="font-inter font-light text-[1.125rem] text-[#131313B3]">
               Adaption Process is Start For Your Pet
             </p>
+
+            <!-- count down  -->
+            <span
+              id="countDown"
+              class="font-inter font-semibold text-[#131313] text-xl"
+              >3</span
+            >
           </div>
         </div>
       </dialog>
