change gap between elements on adopt-modal-box's and increse font size of count-down text|

--- a/index.html
+++ b/index.html
@@ -306,7 +306,9 @@
             </button>
           </form>
           <!-- pet adaption success message  -->
-          <div class="flex flex-col gap-[0.5rem] justify-center items-center">
+          <div
+            class="flex flex-col gap-[0.3rem] md:gap-[0.5rem] justify-center items-center"
+          >
             <figure class="flex justify-center items-center w-20 h-20">
               <img
                 src="https://img.icons8.com/?size=96&id=108783&format=png"
@@ -317,14 +319,16 @@
             <h5 class="font-inter font-bold text-[1.24rem] text-[#131313]">
               Congrats
             </h5>
-            <p class="font-inter font-light text-[1.125rem] text-[#131313B3]">
+            <p
+              class="font-inter font-light text-[1rem] md:text-[1.125rem] text-[#131313B3]"
+            >
               Adaption Process is Start For Your Pet
             </p>
 
             <!-- count down  -->
             <span
               id="countDown"
-              class="font-inter font-semibold text-[#131313] text-xl"
+              class="font-inter font-semibold text-[#131313] text-2xl"
               >3</span
             >
           </div>
